python3-oq-engine (3.16.2-1~xenial01) xenial; urgency=low

  [Michele Simionato, Paolo Tormene]
  * Fixed a bug in extract_agg_curves affecting the QGIS plugin
  * Fixed a bug in rare scenario calculations causing an IndexError in the
    line rctx.clon = c.lons[rctx.sids]

  [Marco Pagani, Michele Simionato]
  * Fixed a bug in the source writer when writing NonParametricSources
  * Removed the conditional spectrum calculator (it was experimental and
    not working properly in many cases)

  [Michele Simionato]
  * Now we log only when the DB schema is really upgraded
  * Fixed the documentation about extracting hazard curves and maps
  * Fixed KeyError in calculations using the EasternCan15Mid with PGA
  * The `minimum_magnitude` parameter was ignored for multiFault sources
  * Replaced hard-coded limit to 25 levels in the MRD postprocessor
    with a simple warning
  * Fixed bug in `oq zip`: when starting from a directory different from the
    job.ini directory, .hdf5 files for nonparametric ruptures were not included
  * Fixed a 32 bit / 64 bit bug in the hinge function of Kuehn et al. (2020)
  * Forbidden source IDs with dots (".")

  [Antonio Ettorre]
  * Fixed the Windows installer so that the engine can be installed without
    administrator privileges

-- Matteo Nastasi (GEM Foundation) <nastasi@openquake.org>  Fri, 21 Apr 2023 12:22:53 +0000

python3-oq-engine (3.16.1-1~xenial01) xenial; urgency=low

  [Michele Simionato]
  * Fixed event based calculations running out of memory due to hazard curve
    arrays being instantiated without need
  * Sampling the ruptures was raising a BlockingIOError sometimes
  * Fixed install.py to not set the shared_dir

  [Kendra Johnson]
  * Fixed bug in extendModel with multiple branchsets

 -- Matteo Nastasi (GEM Foundation) <nastasi@openquake.org>  Wed, 01 Mar 2023 08:47:07 +0000

python3-oq-engine (3.16.0-3~xenial01) xenial; urgency=low

  [Matteo Nastasi]
  * Bumped oq-libs to version 3.8.0

  [Kendra Johnson]