@@ -1,0 +1,42 @@
+#,,,,,"generated_by='OpenQuake engine 3.16.2-git6355f6fdbb', start_date='2023-04-27T06:37:40', checksum=2783839574"
+event_id,gmv_PGA,gmv_SA(0.3),gmv_SA(0.6),gmv_SA(1.0),custom_site_id
+0,4.61836E-02,7.05854E-02,1.14147E-01,4.40993E-02,tv5nrf73
+0,1.73867E-02,2.80497E-01,2.95985E-02,2.18245E-02,tv5pxg5r
+0,2.90235E-01,4.73004E-01,8.35126E-02,2.28802E-01,tuu7y3dp
+0,3.39378E-02,1.15569E-01,3.27225E-02,4.18922E-02,tuv87ue8
+1,1.33220E-01,5.94719E-02,5.88262E-02,1.31546E-01,tv5nrf73
+1,1.19044E-01,7.36482E-02,5.85345E-02,3.87960E-02,tv5pxg5r
+1,1.87788E-01,1.86783E-01,2.10849E-01,1.45112E-01,tuu7y3dp
+1,2.33803E-02,2.35932E-02,2.02666E-02,3.31453E-02,tuv87ue8
+2,8.41127E-02,4.44828E-02,8.91760E-02,5.13174E-02,tv5nrf73
+2,7.94061E-02,2.09451E-01,1.43344E-01,3.12005E-02,tv5pxg5r
+2,2.38803E-01,7.84426E-01,3.05824E-01,2.09727E-01,tuu7y3dp
+2,1.82157E-02,1.92762E-02,1.70782E-01,2.75340E-02,tuv87ue8
+3,6.67267E-02,1.78479E-01,4.59369E-02,2.46863E-02,tv5nrf73
+3,3.37073E-02,1.42495E-01,9.79403E-02,3.42286E-02,tv5pxg5r
+3,2.45189E-01,3.16190E-01,3.67982E-01,1.14839E-01,tuu7y3dp
+3,6.97730E-02,8.70468E-02,1.13944E-01,3.51345E-02,tuv87ue8
+4,2.60739E-02,8.97370E-02,4.54109E-02,2.48070E-02,tv5nrf73
+4,2.20717E-02,1.18711E-01,7.65313E-02,7.87945E-02,tv5pxg5r
+4,1.87318E-01,3.95399E-01,4.21253E-01,8.65676E-02,tuu7y3dp
+4,5.20701E-02,1.01408E-01,4.90076E-02,8.98869E-02,tuv87ue8
+5,4.77922E-02,1.05315E-01,6.44525E-02,3.40561E-02,tv5nrf73
+5,4.05752E-02,1.46684E-01,7.09531E-02,2.61391E-02,tv5pxg5r
+5,5.13009E-01,3.81930E-01,2.01204E-01,4.50818E-02,tuu7y3dp
+5,6.26694E-02,7.09586E-02,1.03929E-01,1.89688E-02,tuv87ue8
+6,2.55303E-02,1.00991E-01,1.32570E-01,8.66462E-02,tv5nrf73
+6,3.31273E-02,5.40937E-02,8.58961E-02,4.82777E-02,tv5pxg5r
+6,1.69415E-01,3.18178E-01,2.97825E-01,1.94421E-01,tuu7y3dp
+6,2.30747E-02,1.16680E-01,1.04353E-01,4.97236E-02,tuv87ue8
+7,7.58293E-02,1.05625E-01,9.10485E-02,1.19506E-01,tv5nrf73
+7,3.83542E-02,5.51375E-02,5.96191E-02,7.89385E-02,tv5pxg5r
+7,2.24720E-01,6.78153E-01,3.83780E-01,2.09966E-01,tuu7y3dp
+7,1.45309E-02,2.98348E-02,3.24092E-02,7.20608E-02,tuv87ue8
+8,4.14906E-02,1.87659E-01,1.41147E-01,1.74073E-02,tv5nrf73
+8,2.76859E-02,6.16768E-02,2.28854E-02,4.78259E-02,tv5pxg5r
+8,1.97026E-01,3.57575E-01,1.74965E-01,8.44562E-02,tuu7y3dp
+8,2.58203E-02,8.95119E-02,9.90642E-02,3.24276E-02,tuv87ue8
+9,7.91271E-02,5.10007E-02,5.60507E-02,5.67212E-02,tv5nrf73
+9,3.90928E-02,5.34267E-02,2.61913E-02,1.40641E-01,tv5pxg5r
+9,1.40050E-01,1.06667E+00,9.58250E-02,1.28359E-01,tuu7y3dp
+9,3.25651E-02,2.66895E-02,4.23900E-02,5.75778E-02,tuv87ue8
