@@ -1,0 +1,26 @@
+[general]
+description = Scenario for Nepal
+calculation_mode = scenario
+ses_seed = 42
+
+[exposure]
+exposure_file = exposure_model.xml
+
+[boundaries]
+region =  78.0 31.5, 89.5 31.5, 89.5 25.5, 78.0 25.5
+
+[rupture]
+rupture_model_file = fault_rupture.xml
+
+[site_params]
+reference_vs30_type = measured
+reference_vs30_value = 760.0
+reference_depth_to_2pt5km_per_sec = 5.0
+reference_depth_to_1pt0km_per_sec = 100.0
+
+[hazard_calculation]
+truncation_level = 3.0
+maximum_distance = 200
+gsim = ChiouYoungs2008
+intensity_measure_types = PGA, SA(0.3), SA(0.6), SA(1.0)
+number_of_ground_motion_fields = 10
