@@ -1,0 +1,7 @@
+[general]
+description = Nepal from CSV
+calculation_mode = scenario
+exposure_file = exposure_model.xml
+sites_csv = sitemesh.csv
+gmfs_file = gmf-data.csv
+intensity_measure_types = PGA, SA(0.3), SA(0.6), SA(1.0)
