@@ -1,0 +1,6 @@
+#,,"generated_by='OpenQuake engine 3.17.0-git6bbb32613e', start_date='2023-04-27T05:49:12', checksum=2783839574"
+custom_site_id,lon,lat
+tv5nrf73,83.31382,29.23617
+tv5pxg5r,83.31382,29.46117
+tuu7y3dp,85.00417,27.38750
+tuv87ue8,86.65417,26.78750
